--- a/Problem1.html
+++ b/Problem1.html
@@ -26,9 +26,8 @@
         <p>Some div2 text</p>
     </div>
 </div>
-
-<p>Some outer text</p>
-<p>Some outer text</p>
+<button id="btn4">CLICK ME</button>
+<button id="btn5">DON'T CLICK ME</button>
 
 <script src="Problem1.js"></script>
 </body>
